<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.dicodingevent.ui.upcoming.UpComingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.dicodingevent.ui.eventfinished.FinishedFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingevent.ui.eventfavorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dicodingevent.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>