<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.eventfavorite.FavoriteFragment">

    <TextView
        android:id="@+id/textDicodingEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:paddingStart="6dp"
        android:text="@string/favorite_event"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_favorite_collection"
        android:textSize="18sp"
        android:paddingStart="6dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/textDicodingEvent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textDashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/error_loading_events" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textDashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNoEventsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_you_can_add_event_to_favorite"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textDashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUpcomingEvents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:clipToPadding="false"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvNoEventsMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:visibility="gone"
        android:elevation="4dp"
        style="@style/Widget.Material3.Button.TonalButton"
        app:layout_constraintTop_toBottomOf="@id/tvErrorMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>